# Debatable-research

./: .dockerignore  .env  .env.example  .gitignore  AGENT_PIPELINE_SPEC_PYTHON.md  CLAUDE.md  Dockerfile  README.md  api.py  design.md  main.py  pyproject.toml  railway.toml
.claude/: settings.local.json
docs/analogy-files/: a35_analogy_agent.py  prompts_additions.py  state_and_runner_changes.py  test_a35.py
src/: topic_refiner.py
src/agents/: a1_research_collector.py  a2_claim_extractor.py  a35_analogy_agent.py  a3_landscape_mapper.py  a4_devils_advocate.py  a5_evidence_judge.py  a6_blog_writer.py  base.py
src/io/: input_parser.py  output_writer.py
src/llm/: client.py  perplexity.py  prompts.py
src/pipeline/: checkpoints.py  runner.py  state.py  watchdog.py
src/utils/: errors.py  logger.py
tests/: conftest.py
tests/fixtures/: sources.py  topics.py
tests/fixtures/llm_responses/: a1_happy_path.txt  a1_no_sources.txt  a2_happy_path.txt  a2_shallow_claims.txt  a35_happy_path.txt  a3_conflation.txt  a3_happy_path.txt  a3_no_contest.txt  a4_happy_path.txt  a4_no_source_citation.txt  a5_happy_path.txt  a5_hedging.txt  a5_missing_sections.txt  a6_happy_path.txt  a6_no_citations.txt  a6_no_concession.txt  a6_word_count_long.txt  a6_word_count_short.txt
tests/integration/: test_chokepoints.py  test_pipeline.py
tests/unit/agents/: test_a1.py  test_a2.py  test_a3.py  test_a35.py  test_a4.py  test_a5.py  test_a6.py
tests/unit/llm/: test_client.py  test_perplexity.py
tests/unit/pipeline/: test_checkpoints.py  test_state.py  test_watchdog.py
ui/: index.html
