[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-agent-pipeline"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "openai>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]
